After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 577030 - Incorrect behaviour when removing currently playing song
Incorrect behaviour when removing currently playing song
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: general
2.24.x
Other Linux
: Normal minor
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2009-03-28 00:36 UTC by Alexander Kojevnikov
Modified: 2009-10-21 18:49 UTC
See Also:
GNOME target: ---
GNOME version: 2.23/2.24



Description Alexander Kojevnikov 2009-03-28 00:36:48 UTC
When removing multiple playlist items, including the one currently playing, the playback starts on incorrect item.

Steps to reproduce:

1. Add 9 (or more) songs, let's call them Song1 ... Song9
2. Double-click on Song4, it should start playing
3. Select songs from Song2 to Song5 using Shift-Mouse1.
4. Right-click and select "Remove".

What happens:

Song8 starts playing.

What should happen:

Song6 should start playing.

Note that if the selection starts at the currently playing song, the correct song starts playing after removing the selection. It looks like the offset is equal to the number of songs in the selection prior to the currently playing song. In the example above, the offset is (Song4-Song2) = 2 songs.
Comment 1 Robin Stocker 2009-09-20 17:06:28 UTC
Confirmed. The problem is that we just remember the position of the current item and then use that for the next playing item. But that only works when we don't also remove any items which appear before the currently playing one.
Comment 2 Robin Stocker 2009-09-20 20:13:25 UTC
There's also some strange thing going on where the playlist becomes completely confused when I reproduce this. Playing another song shows metadata which doesn't belong to it (or the file name was displayed wrong). The whole playlist becomes a mess.
Comment 3 Bastien Nocera 2009-10-21 18:49:06 UTC
Fixed in master and gnome-2-28, please reopen if you
can still reproduce the problem.