Fix play order when removing the currently playing song

We should start playing the first item that won't be removed
after the currently playing one.

Items numbered from 1 to 4, if 3 is playing and 2 and 3 and being
removed, 4 should start playing.

https://bugzilla.gnome.org/show_bug.cgi?id=577030